Main/Src/objects/compliancequest__SQX_Complaint__c/compliancequest__SQX_Complaint__c.object-meta.xml
<CustomObject>    
    <description>This object is used for recording complaints into CQ registered by end users, customers, etc.</description>
    <label>Complaint</label>
    <nameField>
        <displayFormat>COM-{0000000000}</displayFormat>
        <label>Complaint Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaints</pluralLabel>    
    <sharingModel>Read</sharingModel>
</CustomObject>