Main/Src/objects/compliancequest__SQX_Complaint__c/fields/compliancequest__Change_Control__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Change_Control__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field records whether to have change control or not.</description>
    <label>Change Control</label>
    <type>Checkbox</type>
</CustomField>