Main/Src/objects/compliancequest__SQX_Complaint__c/fields/compliancequest__Change_Control_Number__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Change_Control_Number__c</fullName>
    <description>This field records the number of the change control.</description>
    <label>Change Control Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>