Main/Src/objects/compliancequest__SQX_Complaint__c/fields/compliancequest__Country_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Country_of_Origin__c</fullName>
    <description>Records country from where complaint is created</description>
    <label>Country of Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>compliancequest__SQX_Country_Code</valueSetName>
    </valueSet>
</CustomField>