Main/Src/objects/compliancequest__SQX_Complaint__c/fields/compliancequest__SQX_Account__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__SQX_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field records account related to complaints</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SQX_Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>