Main/Src/objects/compliancequest__SQX_Complaint__c/fields/compliancequest__SQX_External_Contact__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__SQX_External_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field shows the contact to which the complaint is related.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Complaints</relationshipLabel>
    <relationshipName>SQX_Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>