Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_Advisory_Notice_Recall__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_Advisory_Notice_Recall__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom Checkbox field for Advisory Notice/Recall.</description>
    <label>Advisory Notice/Recall</label>
    <type>Checkbox</type>
</CustomField>