Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_Advisory_Notice_Recall_Number__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_Advisory_Notice_Recall_Number__c</fullName>
    <description>Custom Text field for Advisory Notice/Recall Number.</description>
    <label>Advisory Notice/Recall Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>