Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_Assay_Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_Assay_Lot_Number__c</fullName>
    <description>This text field will capture Assay Lot Number value.</description>
    <label>Assay Lot Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>