Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_Assigned_Post_Market_Analyst__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_Assigned_Post_Market_Analyst__c</fullName>
    <description>This custom field will hold the Assigned Post Market Analyst value.</description>
    <label>Assigned Post Market Analyst</label>
    <length>255</length>
    <type>Text</type>
</CustomField>