Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_Cartridge_Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_Cartridge_Lot_Number__c</fullName>
    <description>This text will capture Cartridge Lot Number value.</description>
    <label>Cartridge Lot Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>