Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_Case_Notes__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_Case_Notes__c</fullName>
    <description>This long text area field will capture the Case Notes.</description>
    <label>Case Notes</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>