Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_Company_to_Cover_NCE__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_Company_to_Cover_NCE__c</fullName>
    <description>This picklist field will capture Company to Cover NCE value.</description>
    <label>Company to Cover NCE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NSTG</fullName>
            </value>
            <value>
                <fullName>VCYT</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>