Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_Contact_E_Mail__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_Contact_E_Mail__c</fullName>
    <description>This custom text field will hold the Contact Email value.</description>
    <label>Contact E-Mail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>