Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_Contact_Phone_Number__c</fullName>
    <description>This custom text field will hold the Contact Phone Number value.</description>
    <label>Contact Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>