Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_Date__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_Date__c</fullName>
    <description>This custom field will hold the date value.</description>
    <label>Date:</label>
    <type>Date</type>
</CustomField>