Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_Date_Approved_Rejected__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_Date_Approved_Rejected__c</fullName>
    <description>This date field will capture Date Approved/Rejected value.</description>
    <label>Date Approved/Rejected</label>
    <type>Date</type>
</CustomField>