Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_Date_NCE_Submitted__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_Date_NCE_Submitted__c</fullName>
    <description>This date field will capture Date NCE Submitted value.</description>
    <label>Date NCE Submitted</label>
    <type>Date</type>
</CustomField>