Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_Date_Transferred_to_NanoString__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_Date_Transferred_to_NanoString__c</fullName>
    <description>This Date field will capture Date Transferred to NanoString value.</description>
    <label>Date Transferred to NanoString</label>
    <type>Date</type>
</CustomField>