Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_Decision_Made_By__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_Decision_Made_By__c</fullName>
    <description>This custom text field will hold the Decision Made By value.</description>
    <label>Decision Made By:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>