Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_Digital_Analzyer_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_Digital_Analzyer_Serial_Number__c</fullName>
    <description>This text field will capture Digital Analzyer Serial Number value.</description>
    <label>Digital Analzyer Serial Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>