Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_Dt_NanoString_Diagnosis_Ret__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_Dt_NanoString_Diagnosis_Ret__c</fullName>
    <description>This Date field will capture Date NanoString Diagnosis Returned value.</description>
    <label>Date NanoString Diagnosis Returned</label>
    <type>Date</type>
</CustomField>