Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_External_ECO_ECR_Number__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_External_ECO_ECR_Number__c</fullName>
    <description>Custom Text field for External ECO/ECr Number.</description>
    <label>External ECO/ECR Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>