Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_External_NCMR_Number__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_External_NCMR_Number__c</fullName>
    <description>Custom Text field for External NCMR Numner.</description>
    <label>External NCMR Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>