Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_FSE_Visit_Needed__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_FSE_Visit_Needed__c</fullName>
    <description>This picklist field will capture FSE Visit Needed value.</description>
    <label>FSE Visit Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>