Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_Inst_Rel_Date_Cust_Care__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_Inst_Rel_Date_Cust_Care__c</fullName>
    <description>This date field will capture Instrument Release Date to Customer Case value.</description>
    <label>Instrument Release Date to Customer Case</label>
    <type>Date</type>
</CustomField>