Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_Investigation_Extension__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_Investigation_Extension__c</fullName>
    <description>This custom picklist field will allow to select yes or no for Investigation Extension.</description>
    <label>Investigation Extension</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>