Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_Investigation_Summary__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_Investigation_Summary__c</fullName>
    <description>This is a read only text field that will get auto-populated with information entered in Investigation Summary of the linked Investigation record.</description>
    <label>Investigation Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>