Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_InvestigationRecordJustification__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_InvestigationRecordJustification__c</fullName>
    <description>This field will capture the justification for not conducting Investigation.</description>
    <label>No Investigation, Record Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>