Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_Lane_1_Failure__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_Lane_1_Failure__c</fullName>
    <description>This picklist field will capture the Lane 1 Failure.</description>
    <label>Lane 1 Failure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>