Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_Legacy_Documentation__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_Legacy_Documentation__c</fullName>
    <description>Custom Checkbox field for Legacy Documentation.</description>
    <label>Legacy Documentation</label>
    <type>Url</type>
</CustomField>