Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_Manager_Approval__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_Manager_Approval__c</fullName>
    <description>This custom text field will hold the Manager Approval value.</description>
    <label>Manager Approval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>