Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_NanoString_CRM_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_NanoString_CRM_Case_Number__c</fullName>
    <description>This text field will capture NanoString CRM Case Number value.</description>
    <label>NanoString CRM Case Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>