Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_NanoString_SO__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_NanoString_SO__c</fullName>
    <description>This text field will capture NanoString SO# value.</description>
    <label>NanoString SO#</label>
    <length>20</length>
    <type>Text</type>
</CustomField>