Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_NCMR__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_NCMR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom Checkbox field for NCMR.</description>
    <label>NCMR</label>
    <type>Checkbox</type>
</CustomField>