Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_Number_of_1_Test_Kits__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_Number_of_1_Test_Kits__c</fullName>
    <description>This Number field will capture Number of 1-Test Kits value.</description>
    <label>Number of 1-Test Kits</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>