Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_Prep_Station_1_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_Prep_Station_1_Serial_Number__c</fullName>
    <description>This text field will capture the Prep Station 1 Serial Number value.</description>
    <label>Prep Station 1 Serial Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>