Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_Results_of_Investigation__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_Results_of_Investigation__c</fullName>
    <description>This field is read only and will auto populate with information entered in the corresponding picklist field on the linked Investigation compliance_Conclusion__c field once it is completed.</description>
    <label>Results of Investigation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
                <label>Conforms</label>
            </value>
            <value>
                <fullName>Not Confirmed</fullName>
                <label>Nonconformity</label>
            </value>
            <value>
                <fullName>Unverifiable</fullName>
                <label>Cannot Delete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>