Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_Sample_Data_Loss__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_Sample_Data_Loss__c</fullName>
    <description>This Picklist field will be used to capture Sample or Data Loss.</description>
    <label>Sample/Data Loss</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>