Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_SCAR__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_SCAR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom Checkbox field for Task SCAR.</description>
    <label>SCAR</label>
    <type>Checkbox</type>
</CustomField>