Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_Shipping_Address__c</fullName>
    <description>This custom Text field will hold the Shipping Address value.</description>
    <label>Shipping Address</label>
    <type>TextArea</type>
</CustomField>