Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_SQX_NCMR_Number__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_SQX_NCMR_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will link/lookup a Nonconformance record</description>
    <label>NCMR Number</label>
    <referenceTo>compliancequest__SQX_Nonconformance__c</referenceTo>
    <relationshipLabel>Complaints</relationshipLabel>
    <relationshipName>CQ_TASK_SQX_Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>