Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_SQX_Supplier_Escalation__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_SQX_Supplier_Escalation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field functions the link/lookup a Supplier Escalation record.</description>
    <label>Supplier Escalation</label>
    <referenceTo>compliancequest__SQX_Supplier_Escalation__c</referenceTo>
    <relationshipLabel>Complaints</relationshipLabel>
    <relationshipName>CQ_CQ_SQX_Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>