Main/Src/objects/compliancequest__SQX_Complaint__c/fields/CQ_TASK_Veracyte_PO__c.field-meta.xml
<CustomField>
    <fullName>CQ_TASK_Veracyte_PO__c</fullName>
    <description>This text field will capture Veracyte PO# value.</description>
    <label>Veracyte PO#</label>
    <length>20</length>
    <type>Text</type>
</CustomField>